解释React中直接修改状态的问题

--- a/web/src/demo/10ReactTicTacToe05.html
+++ b/web/src/demo/10ReactTicTacToe05.html
@@ -29,9 +29,11 @@ let App = function Board(){
     const[squares,setSquares] = useState(Array(9).fill('X'));
 
     const handleClick = (index) => {
-      const newSquares = squares.slice();
-      newSquares[index] = squares[index] === 'X' ? 'O' : 'X';
-      setSquares(newSquares);
+      // const newSquares = squares.slice();
+      // newSquares[index] = squares[index] === 'X' ? 'O' : 'X';
+      // setSquares(newSquares);
+      squares[index] = squares[index] === 'X' ? 'Y': 'X';
+      setSquares(squares)
     }
 
     return(
